	  5.8 code that employs Scope::Guard (and has less side-effects).

	* autodie::exception::match is better exercised in the 5.8
	  test suite.

	* Re-enabled 'use autodie' vanilla tests.

	* t/backcompat.t no longer fails under Devel::Cover

	* Repeating function names in arguments to autodie no
	  longer causes those functions to become 'stuck' in
	  autodying mode.

1.10_06 Sun Jun 22 21:50:39 AUSEST 2008

	* RELEASE CODENAME: "Chocolateboy", in thanks for his wonderful
	  insights, and for letting me sound off way too many ideas
	  about how things may be done.

	* Fixed speeling errors in context.t, thanks to Stennie.

	* Fixed minor pod errors and omissions.

	* Fixed bug in recv.t which resulted in an incorrect number
	  of skipped tests on systems using socketpair emulation.

	* Fixed a bug that would cause unwanted interactions between
	  autodie and autobox.  Thanks to chocolateboy. (5.8)

	* Wrote a (failing) test case demonstrating that the
	  autodie pragma could leak across files.  Many thanks to
	  chocolateboy for bringing this to my attention.

	* t/system.t checks to see if exotic system has been injured
	  in the same package as 'use qutodie qw(system)'

	* Calling filename reliably reported in 5.8 error messages
	  and error objects.

	* User subs can be made autodying under 5.8, but they leak
	  over the entire package (which is very bad!)

	* Context-checking tests split into package-scope tests and
	  lexical scope tests.

	* Lexical user-subs are disabled under Perl 5.8.  They were
	  leaking everywhere and not being lexical at all.  Attempting
	  to use a lexical user-sub under 5.8 now causes an error.

	* Bugs found in interaction between autodie and Fatal in
	  5.8.  When used together, we can't reliably replace a
	  Fatalised sub with an autodying one, and then switch it
	  back again at the end of block.

	* Bugs described above fixed, thanks to ikegami!

	* Overhauled _remove_lexical_subs, based on ikegami's