@@ -35,7 +35,7 @@ This is not an exhaustive list of TODO items.
 
 * Test fcntl.
 
-== 5.8 ==
+== 5.8 / The One True Autodie ==
 
 * Remove/fix kludge that forces || as the only test
   operator under 5.8
